--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,22 +1,33 @@
-<div>
 <app-header></app-header>
 <main>
-    <div class="box_image">
-        <img src="../../../assets/Image_Sobre.jpg">
+    <div class="container">
+        <div class="box_image">
+            <img src="../../../assets/Image_Sobre.jpg">
             <ul>
-                <a><li style="color:aliceblue"><img src="../../../assets/icons/icons8-linkedin-40.svg"></li></a>
-                <a><li style="color: aquamarine;"><img src="../../../assets/icons/icons8-github-40.svg"></li></a>
-                <a><li style="color: aquamarine;">item3</li></a>
-                <a><li style="color: aquamarine;">item4</li></a>
+                <a>
+                    <li style="color:aliceblue"><img src="../../../assets/icons/icons8-linkedin-40.svg"></li>
+                </a>
+                <a>
+                    <li style="color: aquamarine;"><img src="../../../assets/icons/icons8-github-40.svg"></li>
+                </a>
+                <a>
+                    <li style="color: aquamarine;">item3</li>
+                </a>
+                <a>
+                    <li style="color: aquamarine;">item4</li>
+                </a>
             </ul>
-    </div>
-    <div class="box_text">
-        <h3 class="about">Quem sou</h3>
-        <h2>Kleber Andrade</h2>
-        <h3>FrontEnd Developer</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo fugit totam, explicabo similique ipsa quaerat
-            nulla, itaque beatae doloribus animi neque cupiditate temporibus sequi deserunt iure molestias molestiae
-            earum inciduntdsdsdsdssssssssssssssssssssssssssssssssssssssssssss.loreksdjsdjksdjsjdsdddddddddd</p>
         </div>
+        <div class="box_text">
+            <h3 class="about">Quem sou</h3>
+            <h2>Kleber Andrade</h2>
+            <h3>FrontEnd Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo fugit totam, explicabo similique ipsa
+                quaerat
+                nulla, itaque beatae doloribus animi neque cupiditate temporibus sequi deserunt iure molestias molestiae
+                earum inciduntdsdsdsdssssssssssssssssssssssssssssssssssssssssssss.loreksdjsdjksdjsjdsdddddddddd</p>
+        </div>
+
+    </div>
+    <app-footer></app-footer>
 </main>
-</div>
