--- a/src/app/pages/skills/skills.component.scss
+++ b/src/app/pages/skills/skills.component.scss
@@ -3,180 +3,147 @@
 
 :host{
     main{
-        background-color: #1C1D20;
-    //Descrição
-    .description{
-        width: 48%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-evenly;
-        padding: rem-calc(20) 0;
-        
-        &_box{
+        .container{
             width: 100%;
-            padding: rem-calc(10) rem-calc(20);
+            height: 100vh;
             display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            overflow: auto;
-        h2{
-            font-size: 2.5rem;
-            color: #FFF;
-            font-weight: 500;
-            word-break: break-all;
-        }
-        p{
-            font-size: 1rem;
-            font-weight: 400;
-            word-break: break-all;
-        }
-        .textSelected{
-            color: #FFF;
-            font-weight: 400;
-            text-align: justify;
-            transition: 1000ms linear;
-            animation: changeColor 2s ;
-            word-break: break-all;
-        }
-        @keyframes changeColor {
-            0% {
-              color: rgba(4, 4, 5, 1);
-            }
-            50% {
-              color: rgba(255,255,255, 0.5);
-            }
-            100% {
-              color: rgba(255,255,255, 1);
-            }
-          }
-    }
+            flex-direction: row;
+            justify-content: space-around;
 
-        //Painel
-        .panel{
-            width: 100%;            
-            div{
-                width: 100%;
-                height: rem-calc(200);
-                overflow: auto;
-               
-               ul{
+
+            .skill{
+                width: 40%;
+                height: 100%;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+              
+                flex-direction: column;
+                .description{
+                    width: 100%;
+                    height: rem-calc(150);
+                
                     display: flex;
-                    align-items: flex-start;
-                    justify-content: space-around;
-                    flex-direction: row;
-                    list-style-type: none;
-                    overflow: auto;
-
-                    .first{
-                        width: 70%;
-                       
-                        display: flex;
-                        align-items: center;
-                        justify-content: flex-start;
-                        h3{
-                            font-weight: 600;
-                        }
-
+                    flex-direction: column;
+                    align-items: center;
+                    padding: 0 rem-calc(10);
+                    h2{
+                        color: #e0e0e0;
+                        font-size: 1.5rem;
                     }
-                    .second{
-                        width: 30%;
+                    p{
+                        color: #e0e0e0;
+                        font-size: 0.9rem;
+                        text-align: justify;
+                    }
+                }            
+            .technology{
+                width: 100%;
+                height: rem-calc(300);      
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+
+                .box_icon{
+                    width: 100%;
+                    div{
+                        width: 100%;
+                        height: rem-calc(250);
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        p{
-                            font-size: 1rem;
-                            font-weight: 500;
-                        }
                     }
                 }
             }
-        }
-
-    }
-    //Tecnologias
-    .tecnology{
-        width: 48%;        
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        overflow: auto;
-        div{
-            margin: rem-calc(10) 6%;
-            border-radius: rem-calc(15);
+        } // Fim skill
+        .courses{
+            width: 50%;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-        div:hover{
-            background-color: #231b42;
-        }
-        .noSelected{
-            background-color: rgba(4, 4, 5, 1);
-            width: rem-calc(90);
-            height: rem-calc(90);
-            transition: 1000ms linear;
-        }
-        .selected{
-            border: 2px solid #FA0000;
-            background-color: rgba(35, 27, 66, 0.7);
-            width: rem-calc(90);
-            height: rem-calc(90);
-            transition: 800ms linear;
-        }
+
+            .panel{
+                width: 100%;
+                background-color: #e0e0e0;
+                border: 2px solid #1C1D20;
+                border-radius: 15px;
+                &_title{
+                    color: #1C1D20;
+                }           
+                &_list{
+                    width: 100%;
+                    height: rem-calc(200);
+                    overflow: auto;
+                    border-radius: 15px;
+                    padding: 0 rem-calc(10);
+                } 
+                ul{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: space-around;
+                    border: 1px solid #1C1D20;
+                    border-radius: 15px;
+                        .title{
+                            padding: 0 rem-calc(10);
+                            h3{
+                                font-size: 0.8rem;
+                                color: #1C1D20;
+                                font-weight: 600;
+                            }
+                        }
+                        .hours{
+                            padding: 0 rem-calc(10);
+                            p{
+                                color: #1C1D20;
+                                font-size: 1rem;
+                                font-weight: 500;
+                            }               
+                        }   
+                }
+            }// Fim panel
+        }// Fim courses
+    }
+    }
+
+    @media(max-width: 580px){
+        main{
+            .container{
+                flex-direction: column;
+                .skill{
+                    width: 100%;
+                    height: 40%;
+                    justify-content: center;
+                    .description{
+                        overflow: auto;
+                    }
+                    .technology{
+                        height: rem-calc(150);
+               
+                        .box_icon{
+                            width: 100%;
+                            div{
+                                width: 100%;
+                                height: rem-calc(100);
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            
+                            }
+                        }
         
-    }
-  }  
-  
-  @media(max-width: 580px){
-    main{
-        display: flex;
-    .description{
-        width: 70%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-evenly;
-        padding: rem-calc(20) 0;
+                    }
+                }
+                .courses{
+                    width: 100%;
+                    height: 60%;
 
-        h2{
-            font-size: 1.5rem;
-            color: #FFF;
-            font-weight: 500;
-            word-break: break-all;
-        }
-        p{
-            font-size: 1rem;
-            font-weight: 400;
-            word-break: break-all;
-        }
-
-        }   
-        .tecnology{
-            width: 28%;        
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-            .noSelected{
-                background-color: rgba(4, 4, 5, 1);
-                width: 80px;
-                height: 80px;
-                transition: 1000ms linear;
-            }
-            .selected{
-                border: 2px solid #FA0000;
-                background-color: rgba(35, 27, 66, 0.7);
-                width: 80px;
-                height: 80px;
-                transition: 800ms linear;
+                }
+            
             }
         }
-    
-    
-        }
     }
+
 }
