--- a/src/app/shared/search/search.component.scss
+++ b/src/app/shared/search/search.component.scss
@@ -6,7 +6,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background-color: rgba(250, 0, 0, 0.2);
+        border: 1px solid #E0E0E0;
+        background-color: rgba(28, 29, 32, 0.5);
         padding: rem-calc(15) rem-calc(20);
         margin: 0 auto;
         border-radius: rem-calc(10);
