--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -5,33 +5,52 @@
 
     .container{
         width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        div{
-            border: 2px solid;
-            border-radius: 5px;
-            width: 33%;
-            margin: rem-calc(10) rem-calc(20);
+        height: 100vh;
+       
+        .title{
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            padding: rem-calc(20) rem-calc(10);
-            flex-wrap: wrap;
-            h3{
-                font-style: italic;
-                color:#FFF;
+            align-items: center;
+            justify-content: center;
+            padding: rem-calc(20) 0;
+            h2{
                 font-size: 2rem;
                 font-weight: 500;
+                color: #d8d8d8
             }
-            p{
-                margin: rem-calc(24) 0;
-                color: #d8d8d8;
-                text-align: justify;
-            }
-            a{
-                font-size: 1.2rem;
-                font-weight: 400;
+        }
+        .project{
+            width: 100%;
+            height: 70%;
+            background-color: rgba(1,1,1, 0.4);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 0 10%;
+            overflow: auto;
+            div{
+                width: 30%;   
+                padding: rem-calc(10) rem-calc(10);
+                margin: rem-calc(10) rem-calc(10);
+                border: 1px solid;
+                border-radius: 10px;
+                h3{
+                    font-style: italic;
+                    color:#FFF;
+                    font-size: 1.5rem;
+                    font-weight: 500;
+                }
+                p{
+                    
+                    color: #d8d8d8;
+                    text-align: justify;
+                    line-height: 1rem;
+                }
+                a{
+                    font-size: 1.2rem;
+                    font-weight: 400;
+                }
             }
         }
        
@@ -39,19 +58,13 @@
 
     @media (max-width: 580px){
         .container{
-            width: 100%;
-            display: block;
-            flex-wrap: wrap;
-            div{
-                margin: rem-calc(10) auto;
-                border: 1px solid;
-                border-radius: 5px;
-                width: 80%;
-            
-                display: flex;
-                flex-direction: column;
-                padding: rem-calc(20) rem-calc(10);
-                flex-wrap: wrap;
+
+            .project{
+              
+                div{
+                    width: 100%;   
+                    
+                }
             }
         }
     }
