--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,13 +3,13 @@
           <p >© 2023 Exemplo. Todos os direitos reservados.</p>
         </div>
         <div class="titulo">
-          <h3>{{dadosFooter?.subject_matter}}</h3>
+          <p>{{dadosFooter?.subject_matter}}</p>
         </div>
         <div class="contato">
           <ul >
-            <li>{{dadosFooter?.contact.name}}</li>
-            <li>{{dadosFooter?.contact.tel}}</li>
-            <li>{{dadosFooter?.contact.email}}</li>
+            <li><p>{{dadosFooter?.contact.name}} | </p></li>
+            <li><p> {{dadosFooter?.contact.tel}} | </p></li>
+            <li><p> {{dadosFooter?.contact.email}} | </p></li>
           </ul>
         </div>
   </footer>
