--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -42,10 +42,10 @@
 
         header{
             width: 100%;
-            height: 18%;
+            height: 10%;
             display: flex;
             flex-direction: column;
-            position: absolute;
+            position:static;
             background-color: #231b42;
             align-items: center;
             justify-content: center;
@@ -61,9 +61,8 @@
                 align-items: flex-start;
                 justify-content: center;
                 
-                
                 a{
-                    font-size: rem-calc(10);
+                    font-size: 0.5rem;
                     color: #FFF;
                     margin: 0 rem-calc(5);
                     border-left: 1px solid #FFF;
