--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -22,7 +22,7 @@
         .project{
             width: 100%;
             height: 70%;
-            background-color: rgba(1,1,1, 0.4);
+          
             display: flex;
             align-items: center;
             justify-content: center;
@@ -47,9 +47,12 @@
                     text-align: justify;
                     line-height: 1rem;
                 }
-                a{
+                button{
+                    border: 0px;
+                    background-color:#1C1D20;
                     font-size: 1.2rem;
                     font-weight: 400;
+                    cursor: pointer;
                 }
             }
         }
