--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,17 +4,11 @@
         <div class="box_image">
             <img src="../../../assets/Image_Sobre.jpg">
             <ul>
-                <a>
+                <a href="https://linkedin.com/in/kleber-andrade" target="_blank">
                     <li style="color:aliceblue"><img src="../../../assets/icons/icons8-linkedin-40.svg"></li>
                 </a>
-                <a>
+                <a href="https://github.com/kleber-a" target="_blank">
                     <li style="color: aquamarine;"><img src="../../../assets/icons/icons8-github-40.svg"></li>
-                </a>
-                <a>
-                    <li style="color: aquamarine;">item3</li>
-                </a>
-                <a>
-                    <li style="color: aquamarine;">item4</li>
                 </a>
             </ul>
         </div>
@@ -22,10 +16,10 @@
             <h3 class="about">Quem sou</h3>
             <h2>Kleber Andrade</h2>
             <h3>FrontEnd Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo fugit totam, explicabo similique ipsa
-                quaerat
-                nulla, itaque beatae doloribus animi neque cupiditate temporibus sequi deserunt iure molestias molestiae
-                earum inciduntdsdsdsdssssssssssssssssssssssssssssssssssssssssssss.loreksdjsdjksdjsjdsdddddddddd</p>
+            <p>Olá meu nome é Kleber sou um desenvolvedor FrontEnd, formado em Ciência da Computação e
+                com experiência em Administração. Amo essa área e quero muito me tornar um Dev cada vez melhor e fazer grandes projetos com grandes impactos!
+                Tenho experiência de estágio como Desenvolvedor Mobile onde aprendi novas tecnologias como React e vivênciei metodologias ágeis como Scrum, Jira e o Kanban. Tive interação com o Figma e
+                postman. </p>
         </div>
 
     </div>
