--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,4 +9,7 @@
         <a [routerLink]="'/skills'">Habilidades</a>
         <a [routerLink]="'/contact'">Contato</a>
     </nav>
+    <div>
+        <label (click)="closeFooter()" style="color: #FFF; cursor: pointer;">Teste</label>
+    </div>
 </header>
