--- a/src/app/shared/modal-project/modal-project.component.scss
+++ b/src/app/shared/modal-project/modal-project.component.scss
@@ -80,6 +80,7 @@
                         a{
                             font-size: 1.2rem;
                             font-weight: 400;
+                            color: #111;
                         }
                     }
                 }
