--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,5 +1,5 @@
 <form>
-  <mat-select style="color: #FFF;" [(value)]="selectedValue" (selectionChange)="select()"  >
+  <mat-select [(value)]="selectedValue" (selectionChange)="select()"  >
     <mat-option [value]="'none'">none</mat-option>
     <mat-option  *ngFor="let skill of skills" [value]="skill.nome">
       <p>{{skill.nome}}</p>
