--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,7 +2,7 @@
 <main>
     <div class="container">
         <div class="box_image">
-            <img src="../../../assets/Image_Sobre.jpg">
+            <img src="../../../assets/about.jpg">
             <ul>
                 <a href="https://linkedin.com/in/kleber-andrade" target="_blank">
                     <li style="color:aliceblue"><img src="../../../assets/icons/icons8-linkedin-40.svg"></li>
@@ -23,5 +23,5 @@
         </div>
 
     </div>
-    <app-footer></app-footer>
+    <app-footer *ngIf="close"></app-footer>
 </main>
