--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <div>
                     <h3>LinkedIn</h3>
-                    <p>contato@exemplo.com</p>
+                    <p>https://linkedin.com/in/kleber-andrade</p>
                 </div>
             </div>
         </div>
@@ -40,5 +40,5 @@
 
         </div>
     </div>
-    <app-footer></app-footer>
+    <app-footer *ngIf="close" ></app-footer>
 </main>
