--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -22,5 +22,5 @@
             </mat-expansion-panel>
         </mat-accordion>
     </div>
-    <app-footer ></app-footer>
+    <app-footer *ngIf="close" ></app-footer>
 </main>
