--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
           <ul >
             <li><p>{{dadosFooter?.contact.name}} | </p></li>
             <li><p> {{dadosFooter?.contact.tel}} | </p></li>
-            <li><p> {{dadosFooter?.contact.email}} | </p></li>
+            <li><p><a style="color: #e0e0e0;" href="mailto:enacom@enacom.com.br"> {{dadosFooter?.contact.email}} | </a></p></li>
           </ul>
         </div>
   </footer>
