--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -22,7 +22,7 @@
         .project{
             width: 100%;
             height: 70%;
-          
+            
             display: flex;
             align-items: center;
             justify-content: center;
@@ -31,10 +31,14 @@
             overflow: auto;
             div{
                 width: 30%;   
+            
                 padding: rem-calc(10) rem-calc(10);
                 margin: rem-calc(10) rem-calc(10);
                 border: 1px solid;
                 border-radius: 10px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
                 h3{
                     font-style: italic;
                     color:#FFF;
